--- a/example/index.html
+++ b/example/index.html
@@ -21,6 +21,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/3.4.0/es5-shim.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/3.4.0/es5-sham.js"></script>
   <![endif]-->
+  <p style={{position: 'fixed', 'bottom': '10px'}}>
+    Source code can be found at <a href='https://github.com/georgeOsdDev/react-magic-effects/tree/master/example'>GitHub</a>
+  </p>
   <script src="https://cdn.polyfill.io/v1/polyfill.min.js"></script>
   <script type="text/javascript">
     window.onerror = function() {
